# gregory

./: Cargo.toml  LICENSE-APACHE  Makefile  README.md
.github/workflows/: ci.yml  release.yml
src/: lib.rs  midi.rs  patch_manager.rs  ui.rs
src/dsp/: engine.rs  envelope.rs  filter.rs  mod.rs  oscillator.rs
