[package]
name = "gregory"
version = "0.1.0"
edition = "2024"
description = "Monophonic software synthesizer"
repository = "https://github.com/eiri/gregory"
keywords = ["audio", "synthesizer", "midi", "dsp", "music"]
categories = ["multimedia::audio"]
authors = ["Eric Avdey <eiri@eiri.ca>"]
license = "MIT OR Apache-2.0"

[[bin]]
name = "gregory"
path = "src/bin/gregory.rs"

[lib]
name = "gregory"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
cpal = "0.17"
ctrlc = "3.5.2"
eframe = "0.33"
egui = "0.33"
midir = "0.10"
rfd = "0.17"
ringbuf = "0.4"
serde = { version = "1", features = ["derive"] }
toml = "1.0"
wmidi = "4.0"
